--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.12",
+    "@vitejs/plugin-react": "^5.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "mapbox-gl": "^3.14.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^3.4.1",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.17.2",
+    "@types/react": "^19.1.10",
+    "tw-animate-css": "^1.3.7",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
